Ajuste do base base-path storefront

--- a/storefront/storefront/src/main/resources/application.yml
+++ b/storefront/storefront/src/main/resources/application.yml
@@ -31,4 +31,4 @@ spring:
     queue:
       product-change-availability: product.change.availability.queue
 warehouse:
-  base-path: http://localhost:8080/warehouse
+  base-path: http://localhost:8081/storefront
